--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/moharramansari/Flights-Booking-Service#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
