--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.3.3",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.0",
     "sequelize-cli": "^6.6.0",
